--- a/style.css
+++ b/style.css
@@ -161,6 +161,37 @@ font-size: 22px;
   transform: scale(1.05);
 }
 
+/* Alternative Server Button */
+.backuppage {
+  margin-top: 15px;
+}
+
+.backup-btn {
+  display: inline-block;
+  background: #153d59;
+  color: white;
+  padding: 10px 22px;
+  border-radius: 30px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 0.8rem;
+  
+  
+  
+}
+
+.backup-btn:hover {
+  background: #1c6ba3;
+  
+}
+
+.note p{
+text-align: center;
+  font size: 15px;
+  
+}
+
+
 /* Player */
 .player-container {
   margin: 1.5rem auto;
@@ -296,6 +327,7 @@ footer p {
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+
 
 
 
